--- a/StudentAttendanceSystem/appsettings.json
+++ b/StudentAttendanceSystem/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StudentAttendSysContext": "Server=ZOYA;Database=StudentAttendSys;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "StudentAttendSysContext": "Server=ZOYA;Database=StudentAttendSys;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "StudentAttendanceSystemContext": "Server=(localdb)\\mssqllocaldb;Database=StudentAttendanceSystemContext-3d7d3760-ce4a-4816-9f5e-8443b04a397f;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
